# imperative_programming

./: input.txt  output.txt  sequence.c
sem2/: input.txt
sem2/set4/: CMakeLists.txt  stask1  stask3  stask4  stask6  stask7
sem2/set4/task1/: integerset.c  integerset.h  sample.c
sem2/set4/task2/: c.sh  main.c  matrixsqr.c  myblas.c
sem2/set4/task3/: main.c  sol.c  sol.h
sem2/set4/task4/: c.sh  decls.h  main.c  regs.c
sem2/set4/task5/: core.c  myasm.c  myasm.sh  string.c  string.sh
sem2/set4/task6/: hashmap.c  hashmap.h  main.c
sem2/set4/task7/: hashmap.c  hashmap.h  hm.c  main.c
set1/: task1  task4  task6  task8
set10/: task1  task1.c  task2  task2.c  task3.c  task4.c  task5.c  task6.c  task7  task9.c
set11/: task1  task2  task3  task3.c
set12/: task3  task3.c
set2/: task1.c  task2.c  task3  task3.c  task4  task4.c  task5  task5.c  task6  task6.c  task7.c  task8  task8.c  task9  task9.c
set3/: task1  task1.c  task2  task3  task3.c  task5  task6  task6.c  task8
set4/: task1.c  task2  task4.c  task5  task5.c  task7  task7.c  task8
set5/: task4.c  task5  task5.c  task6.c  task7  task7.c  tempCodeRunnerFile.c
set6/: input.txt  output.txt  task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c  task6  task6.c  task7.c
set7/: input.txt  task1  task1.c  task2  task2.c  task3  task3.c  task4  task4.c  task5  task5.c  task6  task7  task8.c
set8/: 1.in  1.out  3.in  3.out  4.in  5.out  task1  task1.c  task2.c  task3.c  task4  task4.c  task5  task5.c  task6  task6.c
set9/: output.txt  task2  task2.c  task3  task3.c  task4  task4.c  (+6 more)
(+155 files in other folders)
